# minerva

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  lint.yml  test.yml
enki/: app.py
minerva/: app.py  calendar.py  chat_session.py  config.py  env.py  format_chat_history_for_openai.py  get_image_from_telegram_photo.py  llm_session.py  markdown_splitter.py  message_history.py  minerva.py  prompt.py  tool_utils.py
minerva/tests/: tool_utils_test.py
minerva/tools/: calendar.py  fetch_html.py  generate_image.py  send_text_file.py  tool_kwargs.py
minerva/tools/calendar/: get_query_calendar.py  meeting_reminderer.py  query_icalendar.py
minerva/tools/calendar/tests/: calendar_test.py
minerva/tools/calendar/tests/fixtures/: test-calendar-updated.ics  test-calendar.ics
minerva/tools/tests/: calendar_test.py  fetch_html_test.py  generate_image_test.py
tests/: calendar_test.py  markdown_splitter_test.py  prompt_test.py  tool_utils_test.py
tests/fixtures/: test-calendar-1.ics  test-calendar-2.ics
tests/tools/: calendar_test.py
