[tool.poetry]
name = "minerva"
version = "2.0.0"
description = "GPT-powered bot built to help students learn software development"
authors = ["Yurij Mikhalevich <yurij@mikhalevi.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.3"
openai = "^1.43.0"
python-dotenv = "^1.0.1"
tiktoken = "^0.9.0"
python-telegram-bot = "^22.0"
httpx = "^0.27.2"
pyparsing = "^3.1.4"
lxml = {extras = ["html-clean"], version = "^5.3.0"}
icalendar = "^5.0.13"
recurring-ical-events = "^3.2.0"

[tool.poetry.group.dev.dependencies]
lxml-stubs = "^0.5.1"
pyright = {extras = ["nodejs"], version = "^1.1.394"}
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
ruff = "^0.9.7"
freezegun = "^1.5.1"

[tool.poetry.scripts]
minerva = "minerva.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 2
